--- a/stylesheet.css
+++ b/stylesheet.css
@@ -139,7 +139,8 @@ header i:hover {
 }
 
 #profile-image img{
-    height: 300px;
+    height: 400px;
+    width: 400px;
     border-radius: 99999px;
 }
 
